fix padding on mobile

--- a/src/style/GithubRepo.css
+++ b/src/style/GithubRepo.css
@@ -49,4 +49,8 @@
         grid-template-columns: 1fr;
     }
     
+    .description {
+        padding: 0;
+    }
+    
 }
